fix: offscreen to preview move animation works

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -59,6 +59,7 @@
 
   &--navigation {
     aspect-ratio: 1 / 1;
+    z-index: 2;
 
     &--left {
       justify-self: flex-start;
